--- a/webclass02/src/main/resources/static/_index.html
+++ b/webclass02/src/main/resources/static/_index.html
@@ -87,10 +87,15 @@
         <button id="login_cancel_btn">취소</button>
       </div>
     </div>
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"
+    ></script>
     <script>
-      const loginModal = document.querySelector(".login_modal");
-      const loginBtn = document.querySelector("#login_btn");
-      const loginCancelBtn = document.querySelector("#login_cancel_btn");
+      const loginModal = $(".login_modal")[0];
+      const loginBtn = $("#login_btn")[0];
+      const loginCancelBtn = $("#login_cancel_btn")[0];
 
       loginBtn.addEventListener("click", () => {
         loginModal.classList.add("visible");
