--- a/webblog/src/main/resources/static/index.html
+++ b/webblog/src/main/resources/static/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blog Index</title>
+    <link rel="stylesheet" href="./index.css" />
     <script
       src="https://code.jquery.com/jquery-3.5.1.min.js"
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
@@ -11,7 +12,81 @@
     ></script>
   </head>
   <body>
-    <h1>Test</h1>
+    <div>
+      <h1>회원가입</h1>
+      <p>
+        <span>ID</span>
+        <input id="input_reg_id" type="text" />
+      </p>
+      <p>
+        <span>PWD</span>
+        <input id="input_reg_pwd" type="password" />
+      </p>
+      <p>
+        <span>Name</span>
+        <input id="input_reg_name" type="text" />
+      </p>
+      <p>
+        <span>E-mail</span>
+        <input id="input_reg_email" type="email" />
+      </p>
+      <p>
+        <span>phone</span>
+        <input id="input_reg_phone" type="text" />
+      </p>
+      <button onclick="requestRegister()">가입</button>
+    </div>
+    <div>
+      <h1>로그인</h1>
+      <p>
+        <span>ID</span>
+        <input type="text" />
+      </p>
+      <p>
+        <span>PWD</span>
+        <input type="password" />
+      </p>
+      <button onclick="requestLogin()">로그인</button>
+    </div>
+    <div>
+      <h1>회원 리스트</h1>
+      <table id="list_user">
+        <thead>
+          <tr>
+            <th>ID</th>
+            <th>PWD</th>
+            <th>Name</th>
+            <th>E-mail</th>
+            <th>Phone</th>
+          </tr>
+        </thead>
+      </table>
+    </div>
+    <div>
+      <h1>새로운 글 작성</h1>
+      <p>
+        <span>제목</span>
+        <input id="input_post_title" type="text" />
+      </p>
+      <p>
+        <span>내용</span>
+        <textarea id="input_post_content"></textarea>
+      </p>
+      <button onclick="requestNewPost()">작성</button>
+    </div>
+    <div>
+      <h1>글 리스트</h1>
+      <table id="list_post">
+        <thead>
+          <tr>
+            <th>UserId</th>
+            <th>Title</th>
+            <th>Content</th>
+            <th>Created</th>
+          </tr>
+        </thead>
+      </table>
+    </div>
     <script src="./index.js"></script>
   </body>
 </html>
